/*!40101 SET @OLD_CHARACTER_SET_CLIENT=@@CHARACTER_SET_CLIENT */;
/*!40101 SET NAMES  */;
/*!40103 SET @OLD_TIME_ZONE=@@TIME_ZONE */;
/*!40103 SET TIME_ZONE='+00:00' */;
/*!40014 SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0 */;
/*!40101 SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='NO_AUTO_VALUE_ON_ZERO' */;
/*!40111 SET @OLD_SQL_NOTES=@@SQL_NOTES, SQL_NOTES=0 */;

DELETE FROM "public_pages";
/*!40000 ALTER TABLE "public_pages" DISABLE KEYS */;
INSERT INTO "public_pages" ("id", "title", "path", "content", "published_at", "created_at", "updated_at", "deleted_at") VALUES
	(4, 'PPDB Formulir', 'ppdb/formulir', '[{"type":"filament-section","data":{"aside":true,"collapsible":true,"divinder":true,"body":[{"type":"markdown","data":{"content":"# Syarat Pendaftaran\n1. Tiga lembar Fotocopy Kartu Keluarga\n3. Tiga lembar Fotocopy Akta Kelahiran\n5. Tiga lembar Fotocopy SKHUN Terlegalisir\n7. Tiga lembar Fotocopy Ijazah Terlegalisir\n9. Tiga lembar Fotocopy KTP Orang Tua\/Wali\n11. Tiga lembar Pass Foto Berwarna 3x4\n13. Tiga lembar Pass Foto Berwarna 2x3"}},{"type":"team-c","data":{"title":"Hubungi","description":"Syarat pendaftaran bisa dibawa saat mengantar santri ke pesantren. Setelah mengisi formulir pendaftaran online, harap konfirmasi ke salah satu nomor:","member_id":["3"],"whatsapp_message":"Assalamualaikum Wr. Wb. :name. Saya ingin *konsultasi pendaftaran* santri baru."}}],"section_heading":"Lainnya"}}]', '2024-05-13 18:29:03', '2024-05-13 10:50:29', '2024-05-13 11:30:00', NULL),
	(1, 'Home', '/', '[{"type":"slider","data":{"slides":[{"url":"pages\/01HY2S5HCANG51VNJ6TQSSE1NM.jpg","alt":"PAUD & MI AL HAWI"},{"url":"pages\/01HY2S5J35GND0D36ANH97BES3.jpg","alt":"DARUL FALAH KI AGENG MBODO"},{"url":"pages\/01HY2S5JC1EZDEYQ263Q92WA1E.jpg","alt":"SMP ISLAM AL HAWI"},{"url":"pages\/01HY2S5JK1MVS4NH9BBM5FEX7F.jpg","alt":"MA PLUS AL HAWI"}]}},{"type":"team","data":{"title":"Masyayikh Penasehat & Pengasuh","description":null,"teams":[{"url":"pages\/01HY2S5JTVEV7Z5GY4Z89JH93S.jpg","alt":"K.H. Ahmad Basyir Kudus","name":"K.H. Ahmad Basyir Kudus","role":"Penasehat"},{"url":"pages\/01HY2S5JYFGCGYPCVQQVB9238Z.jpg","alt":"Simbah Mulyadi Bin Kardi Ronodikromo","name":"Simbah Mulyadi Bin Kardi Ronodikromo","role":"Pembina"},{"url":"pages\/01HY2S5K0A5CHH2Y1QETM0RMBE.jpg","alt":"Abah K.H. Muhammad Ghufron Mulyadi","name":"Abah K.H. Muhammad Ghufron Mulyadi","role":"Pegasuh"}]}},{"type":"post","data":{"title":"Pawarto","take":3,"description":"Ikuti terus perkembangan dengan wawasan dari Pondok Mbodo."}}]', '2024-05-11 20:11:17', '2024-05-11 13:11:21', '2024-05-17 08:02:21', NULL),
	(3, 'PPDB', 'ppdb', '[{"type":"hero","data":{"secondary_button":"Lihat Biaya Pendaftaran","secondary_button_url":"\/ppdb\/biaya","title":"Penerimaan Peserta Didik Baru ","span_title":"(PPDB)","description":"Telah dibuka penerimaan peserta didik baru. Tahun Ajaran 2024\/2025.","url":{"a082d402-43d6-4fa0-98b6-c127085edebc":"pages\/01HXM0F526NAN090XTH4DVCAK3.jpg"},"alt":"Penerimaan Peserta Didik Baru ","primary_button":"Pendaftaran Online","primary_button_url":"\/ppdb\/formulir","image":"pages\/01HY2SNRZSKAM0PFERS4XT4QFY.jpg","image_alt":"Penerimaan Peserta Didik Baru "}},{"type":"article-a","data":{"title_right":"Syarat Pendaftaran","body_right":"> Tiga lembar Fotocopy Kartu Keluarga\n\n> Tiga lembar Fotocopy Akta Kelahiran\n\n> Tiga lembar Fotocopy SKHUN Terlegalisir\n\n> Tiga lembar Fotocopy Ijazah Terlegalisir\n\n> Tiga lembar Fotocopy KTP Orang Tua\/Wali\n\n> Tiga lembar Pass Foto Berwarna 3x4\n\n> Tiga lembar Pass Foto Berwarna 2x3","title_left":"Alur Pendaftaran","body_left":"> Calon Peserta Didik baru dapat mendaftar secara mandiri melalui website PPDB Online Pondok Mbodo dan mengisi formulir pendaftaran sesuai data diri peserta.\n\n> Calon Peserta Didik baru dapat langsung datang ke Yayasan Pondok Mbodo membawa berkas persyaratan yang dibutuhkan.\n\n> Setelah dinyatakan diterima, peserta PPDB membayar biaya daftar ulang Sebesar Rp. 180.000,-\n\n> Berkas Pendaftaran dan Biaya Daftar Ulang diserahkan langsung ke Yayasan Pondok Mbodo."}},{"type":"team-b","data":{"title":"Konsultasi Pendaftaran","description":null,"member_id":["3"]}}]', '2024-05-11 20:29:04', '2024-05-11 13:29:07', '2024-05-17 08:11:12', NULL),
	(2, 'About', 'tentang', '[{"type":"team","data":{"title":"Masyayikh Penasehat & Pengasuh","description":null,"teams":[{"url":"pages\/01HY2SMW6S97EE9A2T3QYBBY7H.jpg","alt":"K.H. Ahmad Basyir Kudus","name":"K.H. Ahmad Basyir Kudus","role":"Penasehat"},{"url":"pages\/01HY2SMWPHNZ3ERCFW0H0QYDAW.jpg","alt":"Simbah Mulyadi Bin Kardi Ronodikromo","name":"Simbah Mulyadi Bin Kardi Ronodikromo","role":"Pembina"},{"url":"pages\/01HY2SMWRXH5EM2SY5R340CRQQ.jpg","alt":"Abah K.H. Muhammad Ghufron Mulyadi","name":"Abah K.H. Muhammad Ghufron Mulyadi","role":"Pegasuh"}]}},{"type":"article","data":{"title":"Sejarah","sub_title":null,"url":"pages\/01HY2SMWTZP8QVAPM54KE5Q9PW.png","alt":"Pondok Mbodo","body":"> Pondok pesantren Darul Falah Ki Ageng Mbodo didirikan pada tanggal **21 Agustus 2005**, yang jatuh pada hari minggu kliwon.\n\nPendirian pondok pesantren ini berasal dari keprihatinan tokoh terkemuka di Dusun Sendangsari Mbodo, yang dikenal sebagai **\u201cMbah Hari\u201d**. Mbah Hari, seorang tokoh pemerintahan dan agama, merasa prihatin akan kurangnya fasilitas keagamaan bagi masyarakat. Ia memiliki sebidang tanah yang disumbangkan untuk pembangunan masjid, namun tanah tersebut belum diurus oleh seorang ustadz atau guru. Untuk mengatasi hal ini, Mbah Hari mengusulkan keponakannya, **Muhammad Ghufron**, yang merupakan lulusan pondok pesantren Darul Falah Jekulo Kudus, untuk mengajar ngaji.\n\nMuhammad Ghufron, setelah menikah, diminta oleh Mbah Hari untuk mengajar ngaji secara teratur. Dengan berjalannya waktu, jumlah santri yang beliau ajari bertambah, dan akhirnya beliau membentuk sebuah program mengaji yang menyerupai program pondok pesantren. Program ini diberi nama NKRI (Nyandong KaRidhaning Ilahi), yang kemudian berganti nama menjadi MAJELIS JIMAD SHOLAWAT Ahad Kliwon.\n\nDengan terus bertambahnya santri yang tinggal di rumah beliau,kemudian beliau melakukan tabarukan di pondok beliau yaitu Darul Falah Jekulo Kudus,dengan hasil tabarukan akhirnya beliaupun memutuskan mendirikan pondok pesantren yang beliau beri nama Darul Falah Ki Ageng Mbodo atau yang kerap disebut Pondok Mbodo.Waktu berjalan,hari berganti,santri yang tinggal di rumah beliau terus bertambah,dengan dukungan guru,orang tua,istri,keluarga dan kerabat beliau membangun sebuah bangunan yang berukuran tidak besar yang diberi tulisan **\u201cPONDOK PESANTREN DARUL FALAH KI AGENG MBODO\u201d** yang bertempat di Jln.Tombo Ati Dsn.Sendangsari Ds.Tambirejo, RT 05 RW 07 Kec.Toroh Kab.Grobogan Jawa Tengah.\n\nMajelis ahad kliwon yang beliau dirikan semakin lama terus berkembang hingga memiliki beribu-ribu jama''ah yang mengikuti majelis ahad kliwon itu.Karena santri yang masuk pondok pesantren semakin bertambah,Pondok mbodo ini terus berkembang sehingga beliau memutuskan untuk menjadi kiai pesantren yang berdiam di pesantren untuk mendidik para santri-santrinya."}}]', '2024-05-11 20:24:16', '2024-05-11 13:24:20', '2024-08-19 02:57:52', NULL),
	(5, 'Biaya Pendidikan', 'ppdb/biaya', '[{"type":"article","data":{"title":"Biaya Pendidikan","sub_title":null,"url":null,"alt":null,"body":"## Beasiswa\n\n- Peringkat Kelas 1, 2, 3 Bebas Syahriyah SMP\/MA dan Madin selama 3 tahun.\n- Hafal Qur\u2019an 30 Juz atau Alfiyah 700 Nadham bebas Syahriyah Pesantren dan Jurusan selama di Pesantren."}},{"type":"many-table-packages","data":{"package_ids":["1","2","3","4","5","6","7","8"],"title":"Daftar Biaya Pendidikan","description":null}},{"type":"team-b","data":{"title":"Konsultasi Pendafaran","description":null,"member_id":["3"]}}]', '2024-08-19 10:26:12', '2024-08-19 03:26:33', '2024-08-19 03:57:15', NULL);
/*!40000 ALTER TABLE "public_pages" ENABLE KEYS */;

/*!40103 SET TIME_ZONE=IFNULL(@OLD_TIME_ZONE, 'system') */;
/*!40101 SET SQL_MODE=IFNULL(@OLD_SQL_MODE, '') */;
/*!40014 SET FOREIGN_KEY_CHECKS=IFNULL(@OLD_FOREIGN_KEY_CHECKS, 1) */;
/*!40101 SET CHARACTER_SET_CLIENT=@OLD_CHARACTER_SET_CLIENT */;
/*!40111 SET SQL_NOTES=IFNULL(@OLD_SQL_NOTES, 1) */;
